# SMPTE-Copilot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  FILES_TO_DELETE.md  README.md  TESTING_GUIDE.md  audio_processor.py  config-example.yaml  docker-compose.yml  env.template  files_parser.py  lint.sh  main.py  pyproject.toml  requirements.txt
docs/: architecture-overview.md
docs/tools-and-techniques/: ingestion-and-parsing.md  role-aware-access.md
pocs/initial_poc/: .gitignore  CONCLUSION.md  Dockerfile  README.md  ROLE_ACCESS_README.md  docker-compose.yml  ingest.py  ingest_documents.sh  pyproject.toml  query.py  requirements.txt  role_mapping.json  setup.py
pocs/initial_poc/src/rag_ingestion/: __init__.py  chunking.py  embeddings.py  pdf_markdown_loader.py  pipeline.py  retrieval.py  vector_store.py
scripts/: lint.sh
src/: __init__.py  components.py  constants.py  logger.py  pipeline.py  retrieval.py  vector_store.py
src/api/: __init__.py  helpers.py  models.py  server.py
src/chunkers/: __init__.py  constants.py  factory.py  hybrid_chunker.py  langchain_chunker.py  protocol.py  types.py
src/cli/: constants.py  ingest.py  query.py
src/config/: __init__.py  chunking.py  config.py  constants.py  embedding.py  llm.py  loader.py  logging.py  paths.py  retrieval.py  vector_store.py
src/embeddings/: __init__.py  chunk_embedder.py  constants.py  factory.py  gemini.py  helpers.py  huggingface.py  openai.py  protocol.py  types.py
src/llms/: __init__.py  factory.py  gemini.py  protocol.py  types.py
src/loaders/: __init__.py  constants.py  docling_loader.py  factory.py  helpers.py  protocol.py  pymupdf_loader.py  types.py
src/pipeline/: __init__.py  context.py  executor.py  status.py  step.py
src/pipeline/contexts/: __init__.py  ingestion_context.py  query_context.py
src/pipeline/steps/: __init__.py  answer_generation_step.py  chunk_step.py  embedding_generation_step.py  load_step.py  query_embedding_step.py  retrieve_step.py  save_step.py
src/protocols/: __init__.py  chunker.py  document_loader.py  embeddings.py  vector_store.py
src/retrievers/: __init__.py  factory.py  protocol.py  similarity_retriever.py  types.py
src/vector_stores/: __init__.py  chromadb.py  constants.py  factory.py  helpers.py  ingester.py  protocol.py  types.py
vector_db/: chroma.sqlite3
