[project]
name = "rag-ingestion"
version = "0.1.0"
description = "Utilities for ingesting PDFs into a RAG pipeline."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "pymupdf>=1.24.9",
  "pymupdf4llm>=0.0.17",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pyyaml>=6.0",
  "chromadb>=0.4.0",
  "sentence-transformers>=2.2.0",
  "numpy>=1.24.0,<2.0",
  "langchain-huggingface>=0.0.1",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29.0",
  "jupyter>=1.0.0",
]
openai = [
  "openai>=1.0.0",  # For OpenAI embeddings
  "tiktoken>=0.5.0",  # Required by OpenAIEmbeddings for token counting
  "langchain-openai>=0.1.0",  # Recommended OpenAI embeddings package
]


[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

