[project]
name = "rag-ingestion"
version = "0.1.0"
description = "Utilities for ingesting PDFs into a RAG pipeline."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-openai>=0.1.0",
  "pymupdf>=1.24.9",
  "pymupdf4llm>=0.0.17",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pyyaml>=6.0",
  "chromadb>=0.4.0",
  "sentence-transformers>=2.2.0",
  "numpy>=1.24.0,<2.0",
  "langchain-huggingface>=0.0.1",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29.0",
  "jupyter>=1.0.0",
  "ruff>=0.1.0",
]
openai = [
  "openai>=1.0.0",  # For OpenAI embeddings
  "tiktoken>=0.5.0",  # Required by OpenAIEmbeddings for token counting
]


[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Line length matching the project style
line-length = 100
target-version = "py39"

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Ignore specific rules (must be before select)
ignore = [
    "E501",  # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "TRY003", # Avoid specifying long messages outside exception class
    "PLW0603", # Using global statement (needed for singleton pattern)
    "PLW0602", # Using global for lock (needed for singleton pattern)
]

# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented-out code)
    "PD",  # pandas-vet
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"src/__init__.py" = ["RUF022"]  # Allow unsorted __all__ to preserve comments

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 20
max-returns = 10
max-statements = 50

